--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -3,33 +3,31 @@ able;Able §m+1 Attack +1 Defense§!;Capable;Fähig;;;;;;;;;;;x
 active_p;Active §m+1 Attack§!;Actif;Aktiv;;;;;;;;;;;x
 adventurer;Adventurer §M+2 Attack§!;Aventurier;Abenteurer;;;;;;;;;;;x
 aggressive;Aggressive §m+1 Attack§!;Agressif;Aggressiv;;;;;;;;;;;x
-amateur;Amateur §R-1 Defense§!;Amateur;Amateur;;;;;;;;;;;x
-aristocrat;Aristocrat;Aristocrate;Aristokrat;;;;;;;;;;;x
-armchair_general;Armchair General;Général de façade;Sesselgeneral;;;;;;;;;;;x
+amateur;Amateur §R-1 Attack -1 Defense§!;Amateur;Amateur;;;;;;;;;;;x
+armchair_general;Armchair General §R-2 Attack -2 Defense§!;Général de façade;Sesselgeneral;;;;;;;;;;;x
 arrogant;Arrogant §R-2 Attack -2 Defense§!;Arrogant;Arrogant;;;;;;;;;;;x
-artillerist;Artillerist §m+1 Defense§!;Artilleur;Artillerist;;;;;;;;;;;x
+artillerist;Artillerist §m+1 Attack +1 Defense§!;Artilleur;Artillerist;;;;;;;;;;;x
 au_fait;Au Fait §G+3 Attack §m+1 Defense§!;Au fait;Sicher;;;;;;;;;;;x
 audacious;Audacious §M+2 Attack +2 Defense§!;Audacieux;Kühn;;;;;;;;;;;x
 aweless;Aweless;Casse-cou;Respektlos;;;;;;;;;;;x
 balanced_p;Balanced §m+1 Attack +1 Defense§!;Pondéré;Ausgewogen;;;;;;;;;;;x
 ballsy;Ballsy §m+1 Attack§!;Valeureux;Forsch;;;;;;;;;;;x
 bastard;Bastard §R-1 Defense§!;Goujat;Bastard;;;;;;;;;;;x
-bg_engineer;Engineer;;;;;;;;;;;;;x
+bg_engineer;Engineer §m+1 Attack §M+2 Defense§!;;;;;;;;;;;;;x
 bigoted;Bigoted §R-1 Attack -1 Defense§!;Sectaire;Engstirnig;;;;;;;;;;;x
 bold;Bold §M+2 Attack§!;Téméraire;Mutig;;;;;;;;;;;x
-bootlicker;Bootlicker §m+1 Defense§!;Lèche-bottes;Speichellecker;;;;;;;;;;;x
+bootlicker;Bootlicker §R-2 Attack§!;Lèche-bottes;Speichellecker;;;;;;;;;;;x
 brash;Brash §m+1 Attack §R-1 Defense§!;Impudent;Forsch;;;;;;;;;;;x
 brilliant;Brilliant §+3 Attack +3 Defense§!;Brillant;Brilliant;;;;;;;;;;;x
-brownnoser;Brownnoser §m+1 Attack§!;Lèche-cul;Stiefellecker;;;;;;;;;;;x
+brownnoser;Brownnoser §R-2 Defense§!;Lèche-cul;Stiefellecker;;;;;;;;;;;x
 brutish;Brutish §m+1 Attack§!;Brutal;Brutal;;;;;;;;;;;x
-bureaucrat_speed;Bureaucrat Speed;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
-butcher;Butcher;Boucher;Schlächter;;;;;;;;;;;x
+butcher;Butcher §m+1 Attack §R-2 Defense§!;Boucher;Schlächter;;;;;;;;;;;x
 calm;Calm §m+1 Attack §M+2 Defense§!;Calme;Ruhig;;;;;;;;;;;x
 careful;Careful §m+1 Defense§!;Attentif;Sorgsam;;;;;;;;;;;x
 careless;Careless §R-1 Defense§!;Négligent;Achtlos;;;;;;;;;;;x
-cartographer;Cartographer;Cartographe;Kartograf;;;;;;;;;;;x
+cartographer;Cartographer §M+2 Attack +2 Defense§!;Cartographe;Kartograf;;;;;;;;;;;x
 cautious;Cautious §G+3 Defense§!;Prudent;Vorsichtig;;;;;;;;;;;x
-cavalry_school;Cavalry School §M+2 Attack§!;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
+cavalry_officer;Cavalry Officer §M+2 Attack §R-1 Defense§!;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
 charismatic;Charismatic §G+3 Attack §M+2 Defense§!;Charismatique;Charismatisch;;;;;;;;;;;x
 chickenhearted;Chickenhearted §R-2 Attack§!;Poltron;Ängstlich;;;;;;;;;;;x
 chivalrous;Chivalrous §M+2 Attack §m+1 Defense§!;Courtois;Ritterlich;;;;;;;;;;;x
@@ -40,18 +38,19 @@ colonial_trait;Colonial §R-2 Defense§!;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent §m+1 Attack +1 Defense§!;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident §+1 Attack§!;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §M+2 Defense§!;Serein;Bedachtsam;;;;;;;;;;;x
-corrupt;Corrupt;Corrompu;Korrupt;;;;;;;;;;;x
+corrupt;Corrupt §R-3 Attack -3 Defense§;Corrompu;Korrupt;;;;;;;;;;;x
+cossack;Cossack §G+3 Attack §m+1 Defense§!;;;;;;;;;;;;;x
 coward;Coward §R-1 Attack -2 Defense§!;Couard;Kleinmütig;;;;;;;;;;;x
 craven;Craven §R-2 Attack -3 Defense§!;Veule;Mutlos;;;;;;;;;;;x
 cursed_luck;Cursed Luck §M+2 Attack +2 Defense§!;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
 daring;Daring §G+3 Attack§!;Hardi;Draufgängerisch;;;;;;;;;;;x
 dauntless;Dauntless §m+1 Attack §M+2 Defense§!;Déterminé;Unverzagt;;;;;;;;;;;x
-debutante;Debutante;Débutant;Debütant;;;;;;;;;;;x
+debutante;Debutante §R-1 Attack -1 Defense§!;Débutant;Debütant;;;;;;;;;;;x
 decisive;Decisive;;;;;;;;;;;;;x
 deeply_religious;Deeply Religious §R-1 Attack -1 Defense§!;Très croyant;Tief religiös;;;;;;;;;;;x
 defiant;Defiant §G+3 Defense§!;Provocateur;Trotzig;;;;;;;;;;;x
 diligent;Diligent;;;;;;;;;;;;;x
-diplomat;Diplomat;Diplomate;Diplomat;;;;;;;;;;;x
+diplomat;Diplomat §m+1 Defense§!;Diplomate;Diplomat;;;;;;;;;;;x
 diplomatic;Diplomatic;Diplomate;Diplomatisch;;;;;;;;;;;x
 disciplined;Disciplined §M+2 Attack§!;Discipliné;Diszipliniert;;;;;;;;;;;x
 disgraced;Disgraced;Déshonoré;In Ungnade Gefallener;;;;;;;;;;;x
@@ -61,18 +60,19 @@ drillmaster;Drillmaster;Sergent instructeur;Zuchtmeister;;;;;;;;;;;x
 earnest;Earnest;Sérieux;Ernsthaft;;;;;;;;;;;x
 eccentric_genius;Eccentric Genius §M+2 Attack§!;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
 efficient;Efficient §M+2 Attack§!;Efficace;Effizient;;;;;;;;;;;x
+efficient_bureaucrat;Efficient Bureaucrat;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
 elderly;Elderly;Âgé;Älter;;;;;;;;;;;x
 expert;Expert §M+2 Attack +2 Defense§!;Expert;Experte;;;;;;;;;;;x
 expert_raider;Expert Raider §M+2 Attack§!;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
-exranker;Ex-ranker;Ancien militaire;Ex-Gefreiter;;;;;;;;;;;x
+exranker;Ex-ranker §R-1 Attack -1 Defense§!;Ancien militaire;Ex-Gefreiter;;;;;;;;;;;x
 fanatic;Fanatic §m+1 Attack +1 Defense§!;Fanatique;Fanatisch;;;;;;;;;;;x
 gallant;Gallant §M+2 Attack§!;Courageux;Galant;;;;;;;;;;;x
 generals_aide;General’s Aide §m+1 Defense§!;Aide de camp;Generalsadjutant;;;;;;;;;;;x
-gifted_administrator;Gifted Administrator;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
+gifted_administrator;Gifted Administrator §m+1 Attack +1 Defense§!;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
 glory_hound;Glory Hound §R-1 Attack -2 Defense§!;Ambitieux;Ruhmsüchtig;;;;;;;;;;;x
 gutsy;Gutsy §m+1 Defense§!;Brave;Waghalsig;;;;;;;;;;;x
 harsh;Harsh §m+1 Attack +1 Defense§!;Dur;Harsch;;;;;;;;;;;x
-hated;Hated§m+1 Attack +1 Defense§!;Odieux;Gehasst;;;;;;;;;;;x
+hated;Hated §R-1 Attack -1 Defense§!;Odieux;Gehasst;;;;;;;;;;;x
 hellbent;Hellbent §G+3 Attack§!;Acharné;Draufgänger;;;;;;;;;;;x
 heroic;Heroic §m+1 Attack §M+2 Defense§!;Héroïque;Heroisch;;;;;;;;;;;x
 immoral;Immoral;Immoral;Unmoralisch;;;;;;;;;;;x
@@ -81,7 +81,7 @@ impetuous;Impetuous §R-2 Defense§!;Impétueux;Ungestüm;;;;;;;;;;;x
 implacable;Implacable §G+3 Attack§! §G+3 Defense§!;Implacable;Unerbittlich;;;;;;;;;;;x
 impulsive;Impulsive §m+1 Attack §R-2 Defense§!;Impulsif;Impulsiv;;;;;;;;;;;x
 incapable;Incapable §R-2 Attack -2 Defense§!;Incapable;Unfähig;;;;;;;;;;;x
-incompetent;Incompetent;Incompétent;Inkompetent;;;;;;;;;;;x
+incompetent;Incompetent §R-1 Attack -1 Defense§!;Incompétent;Inkompetent;;;;;;;;;;;x
 indifferent;Indifferent R-1 Attack -1 Defense§!;Indifférent;Gleichgültig;;;;;;;;;;;x
 inefficient;Inefficient §R-2 Attack§!;Inefficace;Ineffizient;;;;;;;;;;;x
 inept;Inept §R-1 Attack -1 Defense§!;Inepte;Untauglich;;;;;;;;;;;x
@@ -93,13 +93,14 @@ irate;Irate §m+1 Attack§!;Furieux;Aufbrausend;;;;;;;;;;;x
 keen;Keen §m+1 Attack §M+2 Defense§!;Enthousiaste;Gewitzt;;;;;;;;;;;x
 lackluster;Lackluster §R-2 Attack -1 Defense!;Terne;Lustlos;;;;;;;;;;;x
 lilylivered;Lily-livered §R-2 Attack§!;Froussard;Feige;;;;;;;;;;;x
-madman;Madman;Fou;Irrer;;;;;;;;;;;x
+madman;Madman §M+2 Attack §R-3 Defense§!;Fou;Irrer;;;;;;;;;;;x
 maladroit;Maladroit §R-2 Attack -1 Defense§!;Maladroit;Unbeholfen;;;;;;;;;;;x
 manful;Manful §m+1 Attack§!;Ardent;Männlich;;;;;;;;;;;x
 mediocre;Mediocre §R-1 Attack!;Médiocre;Mittelmäßig;;;;;;;;;;;x
-megalomaniac;Megalomaniac §R-2 Attack§!;Mégalomane;Megalomane;;;;;;;;;;;x
+megalomaniac;Megalomaniac §R-2 Attack -3 Defense§!;Mégalomane;Megalomane;;;;;;;;;;;x
 merciless;Merciless §M+2 Attack +2 Defense§!;Impitoyable;Gnadenlos;;;;;;;;;;;x
 meticulous;Meticulous §M+2 Attack §m+1 Defense§!;Méticuleux;Genau;;;;;;;;;;;x
+military_academy;Military Academy §m+1 Attack +1 Defense§!;;;;;;;;;;;;;x
 nationalist;Nationalist §m+1 Attack§!;;;;;;;;;;;;;x
 natural_born_leader;Natural Born Leader §m+1 Attack§!;Leader naturel;Geborener Anführer;;;;;;;;;;;x
 no_background;No Background §R-2 Attack -2 Defense§!;No Background;Aucun(e);Nichts;;;;;;;;;;;x
@@ -111,60 +112,62 @@ persistent;Persistent §m+1 Attack +1 Defense§!;Persévérant;Hartnäckig;;;;;;;;;;;
 perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
 pessimist;Pessimist §-1 Attack -1 Defense§!;;;;;;;;;;;;;x
 pisspoor;Piss-poor §R-2 Attack -2 Defense§!;Pitoyable;Arm;;;;;;;;;;;x
-poet;Poet §R-1 Attack§!;Poète;Poet;;;;;;;;;;;x
+poet;Poet §m+1 Attack§!;Poète;Poet;;;;;;;;;;;x
 polite;Polite §m+1 Defense§!;Poli;Höflich;;;;;;;;;;;x
 politician;Politician;Politicien;Politiker;;;;;;;;;;;x
 powerful_friends;Powerful Friends;Amis puissants;Mächtige Freunde;;;;;;;;;;;x
-priest;Priest;Prêtre;Priester;;;;;;;;;;;x
-professor;Professor §R-1 Attack -2 Defense§!;Professeur;Professor;;;;;;;;;;;x
+priest;Priest §R-1 Attack §m+1 Defense§!;Prêtre;Priester;;;;;;;;;;;x
+professor;Professor §m+1 Attack +2 Defense§!;Professeur;Professor;;;;;;;;;;;x
 pusillanimous;Pusillanimous §R-3 Attack§!;Pusillanime;Verzagt;;;;;;;;;;;x
 relentless;Relentless §M+2 Attack§!;Implacable;Unbarmherzig;;;;;;;;;;;x
 reserved;Reserved §m+1 Attack §M+2 Defense§!;Réservé;Reserviert;;;;;;;;;;;x
 resolute;Resolute §M+2 Defense§!;Résolu;Resolut;;;;;;;;;;;x
 resourceful;Resourceful §m+1 Attack §M+2 Defense§!;Ingénieux;Findig;;;;;;;;;;;x
-rising_star;Rising Star;Étoile montante;Aufsteigender Stern;;;;;;;;;;;x
+rising_star;Rising Star §M+2 Attack §m+1 Defense§!;Étoile montante;Aufsteigender Stern;;;;;;;;;;;x
 romantic;Romantic §m+1 Attack§!;Romantique;Romantisch;;;;;;;;;;;x
 sad_sack;Sad Sack §R-2 Attack§!;Raté;Trauriger Sack;;;;;;;;;;;x
 scared;Scared §R-1 Defense§!;Craintif;Verängstigt;;;;;;;;;;;x
 school_of_defense;School of Defense §G+3 Defense§!;École de défense;Schule der Verteidigung;;;;;;;;;;;x
-school_of_firepower;School of Firepower §m+1 Attack§!;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
-school_of_offense;School of Offense §m+1 Attack;§!École d'attaque;Schule der Offensive;;;;;;;;;;;x
+school_of_firepower;School of Firepower §M+2 Attack§!;École de la puissance de feu;Schule der Feuerkraft;;Escuela de la potencia de fuego;;;;;;;;;x
+school_of_offense;School of Offense §G+3 Attack;§!École d'attaque;Schule der Offensive;;;;;;;;;;;x
 school_of_the_bayonet;School of the Bayonet §M+2 Attack §m+1 Defense§!;École de la baïonnette;Schule des Bajonetts;;;;;;;;;;;x
+seasoned_aristocrat;Seasoned Aristocrat §M+2 Attack +2 Defense§!;Aristocrate;Aristokrat;;;;;;;;;;;x
 secretive;Secretive;;;;;;;;;;;;;x
 sharp;Sharp §M+2 Attack §m+1 Defense§!;Malin;Klug;;;;;;;;;;;x
 shirker;Shirker §R-2 Attack -1 Defense§!;Tire-au-flanc;Drückeberger;;;;;;;;;;;x
 shrinking_violet;Shrinking Violet §R-1 Attack§!;Timoré;Mauerblümchen;;;;;;;;;;;x
+silver_spoon_aristocrat;Silver-Spoon Aristocrat §R-3 Attack -3 Defense§!;Aristocrate;Aristokrat;;;;;;;;;;;x
 skilled;Skilled §M+1 Attack +1 Defense§!;Talentueux;Geschickt;;;;;;;;;;;x
 smart_p;Smart §m+1 Attack +1 Defense§!;Habile;Schlau;;;;;;;;;;;x
 soft;Soft §R-2 Attack§!;Indolent;Weich;;;;;;;;;;;x
 soldierly;Soldierly §m+1 Attack +1 Defense§!;Militaire;Soldatisch;;;;;;;;;;;x
 spineless;Spineless §R-2 Attack§!;Mou;Rückgratlos;;;;;;;;;;;x
 spirited;Spirited §M+2 Defense§!;Fougueux;Sprühend;;;;;;;;;;;x
-spoiled;Spoiled §M+2 Attack§!;Gâté;Verwöhnt;;;;;;;;;;;x
+spoiled;Spoiled §R-2 Defense§!;Gâté;Verwöhnt;;;;;;;;;;;x
 stalwart;Stalwart §m+1 Attack +1 Defense§!;Robuste;Robust;;;;;;;;;;;x
 steadfast;Steadfast §M+2 Attack§!;Inébranlable;Solide;;;;;;;;;;;x
 stout;Stout §m+1 Defense§!;Solide;Beherzt;;;;;;;;;;;x
 stouthearted;Stouthearted §m+1 Attack +1 Defense§!;Intrépide;Beherzt;;;;;;;;;;;x
 strange;Strange;Étrange;Merkwürdig;;;;;;;;;;;x
 sucker;Sucker §R-1 Attack§!;Gogo;Trottel;;;;;;;;;;;x
-sycophant;Sycophant;Flagorneur;Kriecher;;;;;;;;;;;x
+sycophant;Sycophant §R-2 Attack§!;Flagorneur;Kriecher;;;;;;;;;;;x
 tactful;Tactful §m+1 Defense§!;Délicat;Taktvoll;;;;;;;;;;;x
 timid;Timid §R-1 Attack§!;Timide;Furchtsam;;;;;;;;;;;x
-toady;Toady §m+1 Attack§!;Flatteur;Schleimer;;;;;;;;;;;x
+toady;Toady §R-2 Attack§!;Flatteur;Schleimer;;;;;;;;;;;x
 uncommonly_young;Uncommonly Young §m+1 Attack +1 Defense§!;Singulièrement jeune;Ungewöhnlich jung;;;;;;;;;;;x
 undisciplined;Undisciplined §R-1 Attack -2 Defense§!;Indiscipliné;Undiszipliniert;;;;;;;;;;;x
 unfit;Unfit §R-2 Attack§!;Inapte;Ungeeignet;;;;;;;;;;;x
 unflinching;Unflinching §G+3 Attack§!;Opiniâtre;Entschlossen;;;;;;;;;;;x
 unmanly;Unmanly §R-4 Attack§!;Lâche;Unmännlich;;;;;;;;;;;x
-unqualified;Unqualified;Non qualifié;Unqualifiziert;;;;;;;;;;;x
+unqualified;Unqualified §R-1 Attack -1 Defense§!;Non qualifié;Unqualifiziert;;;;;;;;;;;x
 unruly;Unruly §R-1 Defense§!;Insoumis;Widerborstig;;;;;;;;;;;x
 unsound;Unsound §R-1 Attack -1 Defense§!;Dangereux;Unzuverlässig;;;;;;;;;;;x
 vainglorious;Vainglorious §R-2 Attack -1 Defense§!;Vaniteux;Prahlerisch;;;;;;;;;;;x
 vicious;Vicious §M+2 Attack§!;Violent;Bösartig;;;;;;;;;;;x
-war_college;War College §m+1 Attack§!;École militaire;Militärakademie;;;;;;;;;;;x
+war_college;War College §M+2 Attack +2 Defense§!;École militaire;Militärakademie;;;;;;;;;;;x
 warmonger;Warmonger;Belliciste;Kriegstreiber;;;;;;;;;;;x
 womanizer;Womanizer;Coureur de jupons;Schürzenjäger;;;;;;;;;;;x
 wrathful;Wrathful §M+2 Attack§!;Courroucé;Zornerfüllt;;;;;;;;;;;x
 wretched;Wretched §R-1 Attack -2 Defense§!;Misérable;Jämmerlich;;;;;;;;;;;x
 yellow;Yellow §R-4 Attack§!;Trouillard;Memme;;;;;;;;;;;x
-yesman;Yes-man;Béni-oui-oui;Jasager;;;;;;;;;;;x
+yesman;Yes-man §R-2 Defense§!;Béni-oui-oui;Jasager;;;;;;;;;;;x
