final changes to traits

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1630,5 +1630,5 @@ wild_puppeter;Tigthing the Leash;;;;;;;;;;;;;;
 wild_puppeter_desc;Some of our vassals are getting a bit too out of control, but we are bullying them back into their place!;;;;;;;;;;;;;;
 tourism_campaign;Tourism and Settlement Campaign;;;;;;;;;;;;;;
 tourism_campaign_desc;We are giving incentives to new settlers.;;;;;;;;;;;;;;
-recently_hired_general;Recently Hired General
-recently_hired_general_desc;We have recently hired a foreign general, and must wait a bit for willing candidates before hiring another.
+recently_hired_general;Recently Hired General;;;;;;;;;;;;;;x
+recently_hired_general_desc;We have recently hired a foreign general, and must wait a bit for willing candidates before hiring another.;;;;;;;;;;;;;;x
