--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -15,6 +15,7 @@ ballsy;Ballsy §m+1 Attack§!;Valeureux;Forsch;;;;;;;;;;;x
 bastard;Bastard §R-1 Defense§!;Goujat;Bastard;;;;;;;;;;;x
 bg_engineer;Engineer §m+1 Attack §M+2 Defense§!;;;;;;;;;;;;;x
 bigoted;Bigoted §R-1 Attack -1 Defense§!;Sectaire;Engstirnig;;;;;;;;;;;x
+boisterous;Boisterous §m+1 Attack§!;;;;;;;;;;;;;x
 bold;Bold §M+2 Attack§!;Téméraire;Mutig;;;;;;;;;;;x
 bootlicker;Bootlicker §R-2 Attack§!;Lèche-bottes;Speichellecker;;;;;;;;;;;x
 brash;Brash §m+1 Attack §R-1 Defense§!;Impudent;Forsch;;;;;;;;;;;x
@@ -28,7 +29,7 @@ careless;Careless §R-1 Defense§!;Négligent;Achtlos;;;;;;;;;;;x
 cartographer;Cartographer §M+2 Attack +2 Defense§!;Cartographe;Kartograf;;;;;;;;;;;x
 cautious;Cautious §G+3 Defense§!;Prudent;Vorsichtig;;;;;;;;;;;x
 cavalry_officer;Cavalry Officer §M+2 Attack §R-1 Defense§!;École de cavalerie;Kavallerieschule;;;;;;;;;;;x
-charismatic;Charismatic §G+3 Attack §M+2 Defense§!;Charismatique;Charismatisch;;;;;;;;;;;x
+charismatic;Charismatic §M+2 Attack §m+1 Defense§!;Charismatique;Charismatisch;;;;;;;;;;;x
 chickenhearted;Chickenhearted §R-2 Attack§!;Poltron;Ängstlich;;;;;;;;;;;x
 chivalrous;Chivalrous §M+2 Attack §m+1 Defense§!;Courtois;Ritterlich;;;;;;;;;;;x
 choleric;Choleric §m+1 Attack §R-1 Defense§!;Colérique;Cholerisch;;;;;;;;;;;x
@@ -38,26 +39,28 @@ colonial_trait;Colonial §R-2 Defense§!;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent §m+1 Attack +1 Defense§!;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident §+1 Attack§!;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §M+2 Defense§!;Serein;Bedachtsam;;;;;;;;;;;x
-corrupt;Corrupt §R-3 Attack -3 Defense§;Corrompu;Korrupt;;;;;;;;;;;x
+corrupt;Corrupt §R-3 Attack -3 Defense§!;Corrompu;Korrupt;;;;;;;;;;;x
 cossack;Cossack §G+3 Attack §m+1 Defense§!;;;;;;;;;;;;;x
+courteous;Courteous §m+1 Defense§!;;;;;;;;;;;;;x
 coward;Coward §R-1 Attack -2 Defense§!;Couard;Kleinmütig;;;;;;;;;;;x
 craven;Craven §R-2 Attack -3 Defense§!;Veule;Mutlos;;;;;;;;;;;x
+cunning;Cunning §M+2 Attack +2 Defense§!;;;;;;;;;;;;;x
 cursed_luck;Cursed Luck §M+2 Attack +2 Defense§!;Malchanceux;Vom Pech verflucht;;;;;;;;;;;x
 daring;Daring §G+3 Attack§!;Hardi;Draufgängerisch;;;;;;;;;;;x
 dauntless;Dauntless §m+1 Attack §M+2 Defense§!;Déterminé;Unverzagt;;;;;;;;;;;x
 debutante;Debutante §R-1 Attack -1 Defense§!;Débutant;Debütant;;;;;;;;;;;x
-decisive;Decisive;;;;;;;;;;;;;x
+decisive;Decisive §G+3 Attack §M+2 Defense§!;;;;;;;;;;;;;x
 deeply_religious;Deeply Religious §R-1 Attack -1 Defense§!;Très croyant;Tief religiös;;;;;;;;;;;x
 defiant;Defiant §G+3 Defense§!;Provocateur;Trotzig;;;;;;;;;;;x
-diligent;Diligent;;;;;;;;;;;;;x
+diligent;Diligent §M+2 Attack +2 Defense§!;;;;;;;;;;;;;x
 diplomat;Diplomat §m+1 Defense§!;Diplomate;Diplomat;;;;;;;;;;;x
-diplomatic;Diplomatic;Diplomate;Diplomatisch;;;;;;;;;;;x
+diplomatic;Diplomatic §m+1 Attack +1 Defense§!;Diplomate;Diplomatisch;;;;;;;;;;;x
 disciplined;Disciplined §M+2 Attack§!;Discipliné;Diszipliniert;;;;;;;;;;;x
 disgraced;Disgraced;Déshonoré;In Ungnade Gefallener;;;;;;;;;;;x
 disorderly;Disorderly §R-1 Attack§!;Désordonné;Unordentlich;;;;;;;;;;;x
-doughty;Doughty §+1 Defense§!;Vaillant;Tapfer;;;;;;;;;;;x
-drillmaster;Drillmaster;Sergent instructeur;Zuchtmeister;;;;;;;;;;;x
-earnest;Earnest;Sérieux;Ernsthaft;;;;;;;;;;;x
+doughty;Doughty §m+1 Defense§!;Vaillant;Tapfer;;;;;;;;;;;x
+drillmaster;Drillmaster §m+1 Attack +1 Defense§!;Sergent instructeur;Zuchtmeister;;;;;;;;;;;x
+earnest;Earnest §m+1 Attack§!;Sérieux;Ernsthaft;;;;;;;;;;;x
 eccentric_genius;Eccentric Genius §M+2 Attack§!;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
 efficient;Efficient §M+2 Attack§!;Efficace;Effizient;;;;;;;;;;;x
 efficient_bureaucrat;Efficient Bureaucrat;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
@@ -82,7 +85,7 @@ implacable;Implacable §G+3 Attack§! §G+3 Defense§!;Implacable;Unerbittlich;;;;;;
 impulsive;Impulsive §m+1 Attack §R-2 Defense§!;Impulsif;Impulsiv;;;;;;;;;;;x
 incapable;Incapable §R-2 Attack -2 Defense§!;Incapable;Unfähig;;;;;;;;;;;x
 incompetent;Incompetent §R-1 Attack -1 Defense§!;Incompétent;Inkompetent;;;;;;;;;;;x
-indifferent;Indifferent R-1 Attack -1 Defense§!;Indifférent;Gleichgültig;;;;;;;;;;;x
+indifferent;Indifferent §R-1 Attack -1 Defense§!;Indifférent;Gleichgültig;;;;;;;;;;;x
 inefficient;Inefficient §R-2 Attack§!;Inefficace;Ineffizient;;;;;;;;;;;x
 inept;Inept §R-1 Attack -1 Defense§!;Inepte;Untauglich;;;;;;;;;;;x
 innovative_tactician;Innovative Tactician §m+1 Attack§!;Tacticien novateur;Innovativer Taktiker;;;;;;;;;;;x
@@ -105,8 +108,11 @@ nationalist;Nationalist §m+1 Attack§!;;;;;;;;;;;;;x
 natural_born_leader;Natural Born Leader §m+1 Attack§!;Leader naturel;Geborener Anführer;;;;;;;;;;;x
 no_background;No Background §R-2 Attack -2 Defense§!;No Background;Aucun(e);Nichts;;;;;;;;;;;x
 no_personality;No Personality §R-2 Attack -2 Defense§!;Aucune;Nichts;;;;;;;;;;;x
+neutral;Neutral;;;;;;;;;;;;;x
+old_revolutionary;Old Revolutionary §G+3 Attack +3 Defense§!;;;;;;;;;;;;;x
 old_school;Old School §m+1 Attack §R-2 Defense§!;Vieille école;Alte Schule;;;;;;;;;;;x
 openminded;Openminded §m+1 Attack +1 Defense§!;Ouvert d'esprit;Offen;;;;;;;;;;;x
+orderly;Orderly §m+1 Attack +1 Defense§!;;;;;;;;;;;;;x
 pawn;Pawn;Pion;Pfand;;;;;;;;;;;x
 persistent;Persistent §m+1 Attack +1 Defense§!;Persévérant;Hartnäckig;;;;;;;;;;;x
 perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
@@ -117,8 +123,9 @@ polite;Polite §m+1 Defense§!;Poli;Höflich;;;;;;;;;;;x
 politician;Politician;Politicien;Politiker;;;;;;;;;;;x
 powerful_friends;Powerful Friends;Amis puissants;Mächtige Freunde;;;;;;;;;;;x
 priest;Priest §R-1 Attack §m+1 Defense§!;Prêtre;Priester;;;;;;;;;;;x
-professor;Professor §m+1 Attack +2 Defense§!;Professeur;Professor;;;;;;;;;;;x
+professor;Professor §m+1 Attack +1 Defense§!;Professeur;Professor;;;;;;;;;;;x
 pusillanimous;Pusillanimous §R-3 Attack§!;Pusillanime;Verzagt;;;;;;;;;;;x
+reformer;Reformer §M+2 Attack +2 Defense§!;;;;;;;;;;;;;x
 relentless;Relentless §M+2 Attack§!;Implacable;Unbarmherzig;;;;;;;;;;;x
 reserved;Reserved §m+1 Attack §M+2 Defense§!;Réservé;Reserviert;;;;;;;;;;;x
 resolute;Resolute §M+2 Defense§!;Résolu;Resolut;;;;;;;;;;;x
@@ -158,7 +165,8 @@ uncommonly_young;Uncommonly Young §m+1 Attack +1 Defense§!;Singulièrement jeune;
 undisciplined;Undisciplined §R-1 Attack -2 Defense§!;Indiscipliné;Undiszipliniert;;;;;;;;;;;x
 unfit;Unfit §R-2 Attack§!;Inapte;Ungeeignet;;;;;;;;;;;x
 unflinching;Unflinching §G+3 Attack§!;Opiniâtre;Entschlossen;;;;;;;;;;;x
-unmanly;Unmanly §R-4 Attack§!;Lâche;Unmännlich;;;;;;;;;;;x
+unmanly;Unmanly §R-3 Attack§!;Lâche;Unmännlich;;;;;;;;;;;x
+unperturbed;Unperturbed §m+4 Defense§!;;;;;;;;;;;;;x
 unqualified;Unqualified §R-1 Attack -1 Defense§!;Non qualifié;Unqualifiziert;;;;;;;;;;;x
 unruly;Unruly §R-1 Defense§!;Insoumis;Widerborstig;;;;;;;;;;;x
 unsound;Unsound §R-1 Attack -1 Defense§!;Dangereux;Unzuverlässig;;;;;;;;;;;x
