added easter eggs

--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -113,6 +113,7 @@ old_revolutionary;Old Revolutionary §G+3 Attack +3 Defense§!;;;;;;;;;;;;;x
 old_school;Old School §m+1 Attack §R-2 Defense§!;Vieille école;Alte Schule;;;;;;;;;;;x
 openminded;Openminded §m+1 Attack +1 Defense§!;Ouvert d'esprit;Offen;;;;;;;;;;;x
 orderly;Orderly §m+1 Attack +1 Defense§!;;;;;;;;;;;;;x
+ordinary;Ordinary;;;;;;;;;;;;;x
 pawn;Pawn;Pion;Pfand;;;;;;;;;;;x
 persistent;Persistent §m+1 Attack +1 Defense§!;Persévérant;Hartnäckig;;;;;;;;;;;x
 perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
