--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -53,6 +53,7 @@ decisive;Decisive §G+3 Attack §M+2 Defense§!;;;;;;;;;;;;;x
 deeply_religious;Deeply Religious §R-1 Attack -1 Defense§!;Très croyant;Tief religiös;;;;;;;;;;;x
 defiant;Defiant §G+3 Defense§!;Provocateur;Trotzig;;;;;;;;;;;x
 diligent;Diligent §M+2 Attack +2 Defense§!;;;;;;;;;;;;;x
+diligent_officer;Diligent Officer §m+1 Attack +1 Defense§!;;;;;;;;;;;;;x
 diplomat;Diplomat §m+1 Defense§!;Diplomate;Diplomat;;;;;;;;;;;x
 diplomatic;Diplomatic §m+1 Attack +1 Defense§!;Diplomate;Diplomatisch;;;;;;;;;;;x
 disciplined;Disciplined §M+2 Attack§!;Discipliné;Diszipliniert;;;;;;;;;;;x
@@ -63,7 +64,7 @@ drillmaster;Drillmaster §m+1 Attack +1 Defense§!;Sergent instructeur;Zuchtmeiste
 earnest;Earnest §m+1 Attack§!;Sérieux;Ernsthaft;;;;;;;;;;;x
 eccentric_genius;Eccentric Genius §M+2 Attack§!;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
 efficient;Efficient §M+2 Attack§!;Efficace;Effizient;;;;;;;;;;;x
-efficient_bureaucrat;Efficient Bureaucrat;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
+efficient_bureaucrat;Efficient Bureaucrat §M+2 Attack +2 Defense§!;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
 elderly;Elderly;Âgé;Älter;;;;;;;;;;;x
 expert;Expert §M+2 Attack +2 Defense§!;Expert;Experte;;;;;;;;;;;x
 expert_raider;Expert Raider §M+2 Attack§!;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
@@ -71,7 +72,7 @@ exranker;Ex-ranker §R-1 Attack -1 Defense§!;Ancien militaire;Ex-Gefreiter;;;;;;;
 fanatic;Fanatic §m+1 Attack +1 Defense§!;Fanatique;Fanatisch;;;;;;;;;;;x
 gallant;Gallant §M+2 Attack§!;Courageux;Galant;;;;;;;;;;;x
 generals_aide;General’s Aide §m+1 Defense§!;Aide de camp;Generalsadjutant;;;;;;;;;;;x
-gifted_administrator;Gifted Administrator §m+1 Attack +1 Defense§!;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
+gifted_administrator;Gifted Administrator §G+3 Attack +3 Defense§!;Administrateur doué;Begabter Administrator;;;;;;;;;;;x
 glory_hound;Glory Hound §R-1 Attack -2 Defense§!;Ambitieux;Ruhmsüchtig;;;;;;;;;;;x
 gutsy;Gutsy §m+1 Defense§!;Brave;Waghalsig;;;;;;;;;;;x
 harsh;Harsh §m+1 Attack +1 Defense§!;Dur;Harsch;;;;;;;;;;;x
