fixed renamings + broken decision

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2642,7 +2642,7 @@ state_visit_to_argentina_title;State Visit to Argentina;;;;;;;;;;;;;x
 state_visit_to_argentina_desc;President Campos Sales has been invited to Buenos Aires on an official visit to help promote closer relations between the two nations. The Chilean press, due to currently strained relations between Chile and Argentina, are speculating that we are about to form an alliance with Argentina against Chile. Should we accept the invitation?;;;;;;;;;;;;;x
 statuto_albertino_desc;The Statuto Albertino was the constitution that Charles Albert conceded to the Kingdom of Sardinia-Piedmont, in response to concerning revolutionary activity in the country, on March 4th, 1848. The Statute remained the basis of the kingdom’s legal system even after Italian unification and would be used, although in modified forms, all the way up until 1948.;;;;;;;;;;;;;x
 statuto_albertino_title;The Statuto Albertino;Le Statut albertin;Die Statuto Albertino;;;;;;;;;;;x
-stop_accepting_the_slovaks_desc;Without control of Slovakia it’s pointless to control;;;;;;;;;;;;;x
+stop_accepting_the_slovaks_desc;With our loss of control of Slovakia, we have similarly lost any claim of accepting the Slovak people.;;;;;;;;;;;;;x
 stop_accepting_the_slovaks_title;Rejecting the Slovaks;;;;;;;;;;;;;x
 stop_poland_lithuania_desc;The Poland-Lithuanian union is at an end. We must put aside our dreams of greatness and return to our roots as Poland itself.;;;;;;;;;;;;;x
 stop_poland_lithuania_title;End the Commonwealth;;;;;;;;;;;;;x
