--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -74,7 +74,7 @@ renaming_half_y;Renamings will happen every §G6 months§!.§b;;;;;;;;;;;;x
 renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
 renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
 renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
-event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our North American holdings...§b;;;;;;;;;;;;x
+event_505001_custom_tooltip;§RAn Alyaskan culture has begun to emerge in our North American holdings...§b;;;;;;;;;;;;x
 not_done;§GYou have not done this!§b;;;;;;;;;;;;x
 already_done;§RYou have already done this!§b;;;;;;;;;;;;x
 cannot_do;§RYou cannot do this yet—you don't own the province needed!§b;;;;;;;;;;;;x
