--- a/TGC/localisation/00_flags-election-government.csv
+++ b/TGC/localisation/00_flags-election-government.csv
@@ -22,6 +22,6 @@ reactionary_election_win;Reactionaries won election;;;;;;;;;;;;;x
 semi_constitutional_monarchy_gov;Constitutional Monarchy;;;;;;;;;;;;;x
 social_liberal_election_win;Social Liberals won election;;;;;;;;;;;;;x
 socialist_election_win;Socialists won election;;;;;;;;;;;;;x
-theocratic_government;Theocratic Government;;;;;;;;;;;;;x
+theocracy_gov;Theocratic Government;;;;;;;;;;;;;x
 tory_election_win;Conservatives won election;;;;;;;;;;;;;x
 2nd_monarchygov;Alternative Monarchy Government (eg. Carlist Spain, Bourbon France);;;;;;;;;;;;;x
