--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -86,3 +86,4 @@ retaken_thirteen_colonies;Reiterated claims on Thirteen Colonies;;;;;;;;;x
 is_real_belgium;is Belgium or its recognized successor-state;;;;;;;;;x
 paraguay_is_ours;Paraguay is ours!;;;;;;;;;x
 uruguay_is_ours;Uruguay is ours!;;;;;;;;;x
+anatolian_russian_oblast;Anatolia Integrated into Russia;;;;;;;;;x
