split vitebsk into latgale and vitebsk

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -95,9 +95,10 @@ RUS_343;Egentliga Finland;;;;;;;;;;;;;x
 RUS_349;Estland;;;;;;;;;;;;;x
 RUS_351;Nord Livland;;;;;;;;;;;;;x
 RUS_354;Süd Livland;;;;;;;;;;;;;x
-RUS_356;Vitebsk;;;;;;;;;;;;;x
+RUS_356;Latgaliya;;;;;;;;;;;;;x
 RUS_357;Kurland;;;;;;;;;;;;;x
 RUS_360;Vilna;;;;;;;;;;;;;x
+RUS_945;Vitebsk;;;;;;;;;;;;;x
 RUS_361;Kovno;;;;;;;;;;;;;x
 DEN_367;Jylland;;;;;;;;;;;;;x
 HOL_369;Holsten;;;;;;;;;;;;;x
