added siberia metaregion + new event

--- a/TGC/localisation/00_map-regions-meta.csv
+++ b/TGC/localisation/00_map-regions-meta.csv
@@ -42,3 +42,4 @@ bol_oruro_region;Oruro Region;;;;;;;;;;;;;x
 bol_potosi_region;Potosi Region;;;;;;;;;;;;;x
 bol_chuquisaca_region;Chuquisaca Region;;;;;;;;;;;;;x
 bol_la_paz_claims;La Paz Region;;;;;;;;;;;;;x
+siberia;Siberia;;;;;;;;;;;;;x
