--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -58,11 +58,11 @@ EVTNEXT;Next.;;;;;;;;;;;;;x
 EVTCLOSE;Close.;;;;;;;;;;;;;x
 EVTSTART;Back to the Start.;;;;;;;;;;;;;x
 EVTNAME64;Utility Options, 1/3;;;;;;;;;;;;;x
-EVTDESC64;Welcome to TGC's Utility menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Value Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
-EVTOPTA64;Open National Campaigns menu;;;;;;;;;;;;;x
-EVTOPTB64;National Value Change menu;;;;;;;;;;;;;x
-EVTOPTC64;Open Vassal Release menu;;;;;;;;;;;;;x
-EVTOPTD64;Open Core Return menu;;;;;;;;;;;;;x
+EVTDESC64;Welcome to TGC's Utility Menu!\n\n§BNational Campaigns:§! Plethora of options to do do stuff like increase Research or decrease Infamy by paying high monetary costs.\n\n§BNational Value Changes:§! Access the National Value Change menu.\n\n§BVassal Release Menu:§! Allow you to hand pick and release vassals at will.\n\n§BCore Return Menu§!: Allow you to return cores to other nations at will.;;;;;;;;;;;;;x
+EVTOPTA64;National Campaigns Menu;;;;;;;;;;;;;x
+EVTOPTB64;National Value Change Menu;;;;;;;;;;;;;x
+EVTOPTC64;Open Vassal Release Menu;;;;;;;;;;;;;x
+EVTOPTD64;Open Core Return Menu;;;;;;;;;;;;;x
 EVTNAME65;Utility Options, 2/3;;;;;;;;;;;;;x
 EVTDESC65;\n§BReduce Global Population:§! Will do as it says, reducing the global population by 10%. Beware as this is permanent!\n\n§BVassal Tax Payment§!: Activate or Deactivates vassals paying tax to you.\n\n§BRequest a General§!: This will give a single free average general. You can have only one cheat general at a time.\n\n§BTech School Change Toggle§!: Shows decisions for Tech School Changing.;;;;;;;;;;;;;x
 EVTOPTA65;Reduce Global Population by 10%;;;;;;;;;;;;;x
