--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -84,3 +84,4 @@ pobudka_options_enabled;§GThis will let us start to disseminate favorable articl
 part_2_polish_kings;The Provisional National Government shall consider alternate options for our future monarch...§b;;;;;;;;;;;;;x
 exit_polish_kings;The Provisional National Government is unable to come to a decision on our future monarch as of now.§b;;;;;;;;;;;;;x
 part_3_polish_kings;The Provisional National Government shall consider more alternate options for our future monarch, some of them rather questionable...§b;;;;;;;;;;;;;x
+szkola_wojskowa_polska_tooltip;Our military officers will be more skilled when the uprising starts.§b;;;;;;;;;;;;;x
