added another infamy removal campaign

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -89,22 +89,23 @@ EVTOPTC68;Pick Autocracy;;;;;;;;;;;;;x
 EVTOPTD68;Pick Equality;;;;;;;;;;;;;
 EVTOPTE68;Pick Liberty;;;;;;;;;;;;;
 EVTNAME69;National Campaign Menu, 1/3;;;;;;;;;;;;;x
-EVTDESC69;§BMedium Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BDiplomatic Campaign§!: Initiate a series of Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
+EVTDESC69;§BMinor Diplomatic Campaign§!: Initiate a series of minor Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BMajor Diplomatic Campaign§!: Initiate a series of major Diplomatic Actions to clear our name and make ammends with other countries, lowering our Infamy.\n\n§BAcademic Campaign§!: By making a series of concessions to Universities and other institutions, private or public, we will able to increase our Research Point production.;;;;;;;;;;;;;x
 EVTOPTA69;Remove all currently active National Campaigns;;;;;;;;;;;;;x
-EVTOPTB69;Medium Birth Rate Campaign — §RWill Remove Low/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
-EVTOPTC69;Diplomatic Campaign;;;;;;;;;;;;;x
+EVTOPTB69;Minor Diplomatic Campaign — §RWill Remove Major Diplomatic Campaign!§!;;;;;;;;;;;;;x
+EVTOPTC69;Major Diplomatic Campaign — §RWill Remove Minor Diplomatic Campaign!§!;;;;;;;;;;;;;x
 EVTOPTD69;Academic Campaign;;;;;;;;;;;;;x
 EVTNAME70;National Campaign Menu, 2/3;;;;;;;;;;;;;x
-EVTDESC70;§BColonial Settling Campaign§!: Incentivize our citizens to move and settle in our colonies, increasing colonial immigration.\n\n§BAnti Emigration Campaign§!: By using the power of patriotism and propaganda, we will convince our citizens to stay, instead of simply using the other Utility Decision to close the borders.\n\n§BTourism and Settlement Campaign§!: We can start an International Campaign promoting our country, and by giving incentives to new settlers, we can heavily increase the numbers of Immigrations into our country.\n\n§BDirection Immigration Menu§!: Open The Direction Immigration submod menu. This will only work if said submod is activated.;;;;;;;;;;;;;x
+EVTDESC70;§BColonial Settling Campaign§!: Incentivize our citizens to move and settle in our colonies, increasing colonial immigration.\n§BAnti Emigration Campaign§!: By using the power of patriotism and propaganda, we will convince our citizens to stay, instead of using the other Utility Decision to close the borders.\n§BTourism and Settlement Campaign§!: We can start an International Campaign promoting our country, and by giving incentives to new settlers, we can heavily increase the numbers of Immigrations into our country.\n§BDirection Immigration Menu§!: Open The Direction Immigration submod menu. This will only work if said submod is activated.;;;;;;;;;;;;;x
 EVTOPTA70;Colonial Settling Campaign;;;;;;;;;;;;;x
 EVTOPTB70;Anti Emigration Campaign;;;;;;;;;;;;;x
 EVTOPTC70;Tourism and Settlement Campaign;;;;;;;;;;;;;x
 EVTOPTD70;Open Direction Immigration Menu;;;;;;;;;;;;;x
 EVTNAME81;National Campaign Menu, 3/3;;;;;;;;;;;;;x
-EVTDESC81;§BLow Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.\n\n§BHigh Birth Rate Campaign:§! Give the people in your country incentives to have children and form bigger families, increasing population growth.;;;;;;;;;;;;;x
+EVTDESC81;§BLow Birth Rate Campaign:§! Give the people in your country small incentives to have children and form bigger families, increasing population growth.\n\n§BMedium Birth Rate Campaign:§! Give the people in your country moderate incentives to have children and form bigger families, increasing population growth.\n\n§BHigh Birth Rate Campaign:§! Give the people in your country significant incentives to have children and form bigger families, increasing population growth.;;;;;;;;;;;;;x
 EVTOPTA81;Low Birth Rate Campaign — §RWill Remove Medium/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
-EVTOPTB81;High Birth Rate Campaign — §RWill Remove Low/Medium Birth Rate Campaigns!§!;;;;;;;;;;;;;x
-EVTOPTC81;Remove All Birth Rate Campaigns;;;;;;;;;;;;;x
+EVTOPTB81;Medium Birth Rate Campaign — §RWill Remove Low/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
+EVTOPTC81;High Birth Rate Campaign — §RWill Remove Low/Medium Birth Rate Campaigns!§!;;;;;;;;;;;;;x
+EVTOPTD81;Remove All Birth Rate Campaigns;;;;;;;;;;;;;x
 EVTNAME71;Multiplayer Menu;;;;;;;;;;;;;x
 EVTDESC71;§BAsk for Grants§!: Asks all other players for a Money Grant, they can choose to refuse it.\n\n§BAllow players to send me Grants§!: Players will be able to send grants to you.\n\n§BAllow players to ask me for Grants§!: Allows other players to ask you for grants, you can turn this off if they are spamming you.;;;;;;;;;;;;;x
 EVTOPTA71;Ask for Grants;;;;;;;;;;;;;x
