--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1505,8 +1505,10 @@ lucrative_russia_trade_desc;As we are the only major European neighbour at peace
 german_threat;Germany is a Threat;;;;;;;;;;;;;x
 triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
 central_powers;Member of Central Powers;;;;;;;;;;;;;x
-infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
-infamy_removal_desc;You are focusing budgetary resources to fund this campaign. §YCampaign Cost:§! Roughly §R10%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
+low_infamy_removal;Active Minor Diplomatic Campaign;;;;;;;;;;;;;x
+low_infamy_removal_desc;You are focusing budgetary resources to fund this campaign. §YCampaign Cost:§! Roughly §R20%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
+high_infamy_removal;Active Major Diplomatic Campaign;;;;;;;;;;;;;x
+high_infamy_removal_desc;You are focusing budgetary resources to fund this campaign. §YCampaign Cost:§! Roughly §R40%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
 more_colonial_settlement;Active Colonial Campaign;;;;;;;;;;;;;x
 more_colonial_settlement_desc;§YCampaign Cost:§! Roughly §R10%§! of your maximum monthly tax income, every month.;;;;;;;;;;;;;x
 less_emigration;Active Anti-Emigration Campaign;;;;;;;;;;;;;x
