--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -99,7 +99,7 @@ EVTDESC70;§BColonial Settling Campaign§!: Incentivize our citizens to move and s
 EVTOPTA70;Colonial Settling Campaign;;;;;;;;;;;;;x
 EVTOPTB70;Anti Emigration Campaign;;;;;;;;;;;;;x
 EVTOPTC70;Tourism and Settlement Campaign;;;;;;;;;;;;;x
-EVTOPTD70;Open Direction Immigration Menu;;;;;;;;;;;;;x
+EVTOPTD70;Open Direct Immigration Menu;;;;;;;;;;;;;x
 EVTNAME81;National Campaign Menu, 3/3;;;;;;;;;;;;;x
 EVTDESC81;§BLow Birth Rate Campaign:§! Give the people in your country small incentives to have children and form bigger families, increasing population growth.\n\n§BMedium Birth Rate Campaign:§! Give the people in your country moderate incentives to have children and form bigger families, increasing population growth.\n\n§BHigh Birth Rate Campaign:§! Give the people in your country significant incentives to have children and form bigger families, increasing population growth.;;;;;;;;;;;;;x
 EVTOPTA81;Low Birth Rate Campaign — §RWill Remove Medium/High Birth Rate Campaigns!§!;;;;;;;;;;;;;x
