--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -65,7 +65,7 @@ earnest;Earnest §m+1 Attack§!;Sérieux;Ernsthaft;;;;;;;;;;;x
 eccentric_genius;Eccentric Genius §M+2 Attack§!;Génie excentrique;Exzentrisches Genie;;;;;;;;;;;x
 efficient;Efficient §M+2 Attack§!;Efficace;Effizient;;;;;;;;;;;x
 efficient_bureaucrat;Efficient Bureaucrat §M+2 Attack +2 Defense§!;Vitesse de bureaucrate;Bürokratische Geschwindigkeit;;;;;;;;;;;x
-elderly;Elderly;Âgé;Älter;;;;;;;;;;;x
+elder;Elder;Âgé;Älter;;;;;;;;;;;x
 expert;Expert §M+2 Attack +2 Defense§!;Expert;Experte;;;;;;;;;;;x
 expert_raider;Expert Raider §M+2 Attack§!;Commando expérimenté;Überfallexperte;;;;;;;;;;;x
 exranker;Ex-ranker §R-1 Attack -1 Defense§!;Ancien militaire;Ex-Gefreiter;;;;;;;;;;;x
