--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -87,3 +87,4 @@ is_real_belgium;is Belgium or its recognized successor-state;;;;;;;;;x
 paraguay_is_ours;Paraguay is ours!;;;;;;;;;x
 uruguay_is_ours;Uruguay is ours!;;;;;;;;;x
 anatolian_russian_oblast;Anatolia Integrated into Russia;;;;;;;;;x
+agressive_tag;Has Pro-Militarism or Jingoism as War Policy.;;;;;;;;;x
