--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -19,7 +19,7 @@ boisterous;Boisterous §m+1 Attack§!;;;;;;;;;;;;;x
 bold;Bold §M+2 Attack§!;Téméraire;Mutig;;;;;;;;;;;x
 bootlicker;Bootlicker §R-2 Attack§!;Lèche-bottes;Speichellecker;;;;;;;;;;;x
 brash;Brash §m+1 Attack §R-1 Defense§!;Impudent;Forsch;;;;;;;;;;;x
-brilliant;Brilliant §+3 Attack +3 Defense§!;Brillant;Brilliant;;;;;;;;;;;x
+brilliant;Brilliant §G+3 Attack +3 Defense§!;Brillant;Brilliant;;;;;;;;;;;x
 brownnoser;Brownnoser §R-2 Defense§!;Lèche-cul;Stiefellecker;;;;;;;;;;;x
 brutish;Brutish §m+1 Attack§!;Brutal;Brutal;;;;;;;;;;;x
 butcher;Butcher §m+1 Attack §R-2 Defense§!;Boucher;Schlächter;;;;;;;;;;;x
@@ -37,7 +37,7 @@ clever;Clever §G+3 Defense §M+2 Defense§!;Adroit;Clever;;;;;;;;;;;x
 clueless;Clueless §R-1 Defense§!;Ignorant;Ahnungslos;;;;;;;;;;;x
 colonial_trait;Colonial §R-2 Defense§!;Colonial;Kolonial;;;;;;;;;;;x
 competent;Competent §m+1 Attack +1 Defense§!;Compétent;Kompetent;;;;;;;;;;;x
-confident;Confident §+1 Attack§!;Confiant;Sicher;;;;;;;;;;;x
+confident;Confident §m+1 Attack§!;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §M+2 Defense§!;Serein;Bedachtsam;;;;;;;;;;;x
 corrupt;Corrupt §R-3 Attack -3 Defense§!;Corrompu;Korrupt;;;;;;;;;;;x
 cossack;Cossack §G+3 Attack §m+1 Defense§!;;;;;;;;;;;;;x
@@ -118,7 +118,7 @@ ordinary;Ordinary;;;;;;;;;;;;;x
 pawn;Pawn;Pion;Pfand;;;;;;;;;;;x
 persistent;Persistent §m+1 Attack +1 Defense§!;Persévérant;Hartnäckig;;;;;;;;;;;x
 perverse;Perverse;Entêté;Pervers;;;;;;;;;;;x
-pessimist;Pessimist §-1 Attack -1 Defense§!;;;;;;;;;;;;;x
+pessimist;Pessimist §R-1 Attack -1 Defense§!;;;;;;;;;;;;;x
 pisspoor;Piss-poor §R-2 Attack -2 Defense§!;Pitoyable;Arm;;;;;;;;;;;x
 poet;Poet §m+1 Attack§!;Poète;Poet;;;;;;;;;;;x
 polite;Polite §m+1 Defense§!;Poli;Höflich;;;;;;;;;;;x
