--- a/TGC/localisation/00_events_10000000.csv
+++ b/TGC/localisation/00_events_10000000.csv
@@ -36,7 +36,7 @@ EVTOPTD10000104;$COUNTRY$ must have the best, no matter what.;;;;;;;;;;;;;x
 EVTOPTE10000104;Our present generals are enough for now.;;;;;;;;;;;;;x
 EVTDESC10000105;It is time to whale and spend your entire treasury desperately trying to get a 5 star.;;;;;;;;;;;;;x
 EVTNAME10000105;TGGacha - Generals;;;;;;;;;;;;;x
-EVTOPTA10000105;Pull;;;;;;;;;;;;;x
+EVTOPTA10000105;Pull—Our new general will show up in 5 days.;;;;;;;;;;;;;x
 EVTOPTB10000105;Exit.;;;;;;;;;;;;;x
 EVTDESC11380022;In a surprise election win, the communists have taken power in the government-despite the fact that their party opposes the monarchy and has been banned. Regardless, the $COUNTRY_ADJ$ people have spoken, and thus a political showdown has resulted: the communists cannot be permitted to win, but even if they’re refused the next election might simply have the same crisis occur all over again. Perhaps the time has come to reconsider electoral reforms and put the power back where it belongs?;;;;;;;;;;;;;x
 EVTOPTA11380022;This cannot be allowed. The Liberals shall rule instead.;;;;;;;;;;;;;x
