added decisions to simplify chinese

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3601,3 +3601,7 @@ dismantle_german_confederation_desc;Our armies triumphantly march through Berlin
 dismantle_german_confederation_title;Dismantle the German Confederation;;;;;;;;;;;;;x
 press_schleswig_issue_title;Press the Schleswig Issue;;;;;;;;;;;;;x
 press_schleswig_issue_desc;;;;;;;;;;;;;;x
+switch_to_vernacular_chinese_title;Over the course of several millenia, literary and vernacular Chinese have diverged greatly from each other, making it so the words and phrases in our greatest works differ wholly from those spoken by the common person on the street. This wide gap poses a significant obstacle to our objective of reaching full literacy as soon as possible—as well as our ultimate objective of fully modernizing China—and it is time that we reformed written Chinese to match vernacular Chinese.;;;;;;;;;;;;;x
+switch_to_vernacular_chinese_desc;Switch to Baihua;;;;;;;;;;;;;x
+simplify_chinese_title;Although we have managed to convince most to write in vernacular over literary Chinese, many Chinese characters are still overly complex and difficult to learn. Furthermore, many separate individuals have made various casual simplifications of various characters, leading to continued disparity between the overly formalistic literary Chinese and the Chinese that is used in practice. It is time that we collated and added to these simplifications, so that Chinese may become ever more accessible to the common people.;;;;;;;;;;;;;x
+simplify_chinese_desc;Begin Simplifying Chinese Characters;;;;;;;;;;;;;x
