added proletarian voting

--- a/TGC/localisation/00_reforms-movements.csv
+++ b/TGC/localisation/00_reforms-movements.csv
@@ -482,6 +482,9 @@ professional_naval_officers_l;Professional naval officers;;;;;;;;;;;;;x
 professional_officers;Professional officers;;;;;;;;;;;;;x
 professional_officers_desc;Our troops AND officers are the finest in the world. For real this time.;;;;;;;;;;;;;x
 professional_officers_l;Professional officers;;;;;;;;;;;;;x
+proletarian_voting;Proletarian Voting;;;;;;;;;;;;;x
+proletarian_voting_desc;All the progressive-democratic elements are allowed to vote—with bourgeois and imperialist elements barred—whilst we are still in the midst of building our new proletarian state.;;;;;;;;;;;;;x
+proletarian_voting_l;Proletarian Voting;;;;;;;;;;;;;x
 proportional_representation;Proportional;;;;;;;;;;;;;x
 proportional_representation_desc;The percentage of votes that groups of candidates obtain in elections equals the percentage of seats they receive;Le pourcentage de voix que les groupes de candidats obtiennent lors des élections correspondent au pourcentage de sièges qu'ils reçoivent.;Der Prozentsatz an Stimmen, den Kandidatengruppen bei Wahlen erzielen, ist gleich dem Prozentsatz an Sitzen, den sie erhalten.;;;;;;;;;;;x
 proportional_representation_l;Proportional Representation;Représentation proportionnelle;Proportionale Repräsentation;;;;;;;;;;;x
